// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`run check-exports in package-a 1`] = `
"
> check-exports
> node ../../../../bin/index.js

"
`;

exports[`run check-exports in package-b 1`] = `
"
> check-exports
> node ../../../../bin/index.js -e index.tsx

"
`;

exports[`run check-exports in package-c 1`] = `
"
> check-exports
> node ../../../../bin/index.js

"
`;
